# csv-wings

./: .gitignore  Cargo.toml  README.md  README_CN.md  fix_components.ps1  global.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts
crates/large-text-core/: Cargo.toml  README.md
crates/large-text-core/src/: encoding_utils.rs  file_reader.rs  lib.rs  line_indexer.rs  replacer.rs  search_engine.rs
src/: App.jsx  App.tsx  App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/insight/: command.rs  mod.rs  tojson.rs  utils.rs
src-tauri/src/insight/cmd/: apply.rs  cat.rs  dedup.rs  enumer_by_group.rs  enumerate.rs  extsort.rs  idx.rs  insert.rs  mod.rs  rename.rs  skip.rs  slice.rs
src-tauri/src/insight/cmd/convert/: csv_to_csv.rs  excel_to_csv.rs  mod.rs  perform.rs
src-tauri/src/insight/cmd/search/: filters.rs  filters_chain.rs  filters_multi.rs  generic.rs  perform.rs
src-tauri/src/insight/flow/: filter.rs  mod.rs  operation.rs  process.rs  str.rs  utils.rs
src-tauri/src/insight/io/csv/: encoding.rs  mod.rs  options.rs  selection.rs
src-tauri/src/insight/io/excel/: excel_reader.rs  xlsx_writer.rs
src-tauri/src/insight/view/: large_text_view.rs  mod.rs  table_edit.rs  table_view.rs  text_view.rs  text_view_utils.rs
src-tauri/tests/: test_enumerate.rs  test_idx.rs  test_search.rs  test_skip.rs
src/components/: FindDialog.jsx  FindDialog.jsx.map  FindDialog.tsx  FloatingSearchPanel.tsx  GotoDialog.jsx  GotoDialog.jsx.map  GotoDialog.tsx  ReplaceDialog.jsx  ReplaceDialog.jsx.map  ReplaceDialog.tsx
src/components/ReIcon/src/: offlineIcon.ts
src/components/ui/: badge.jsx  badge.jsx.map  badge.tsx  button.jsx  button.jsx.map  checkbox.jsx  checkbox.jsx.map  checkbox.tsx  dialog.jsx  dialog.jsx.map  dialog.tsx  input.jsx  input.jsx.map  label.jsx  label.jsx.map  scroll-area.jsx  scroll-area.jsx.map  scroll-area.tsx  select.tsx
src/layout/: index.vue  types.ts
src/layout/components/: appMain.vue  navbar.vue
src/layout/components/setting/: index.vue
src/layout/components/sidebar/: sidebarItem.vue
src/layout/setting/: index.vue
src/layout/silicone/: siliconeButton.vue  siliconeCard.vue  siliconeDialog.vue  siliconeInput.vue  siliconeInputNumber.vue  siliconeLink.vue  siliconeProgress.vue  siliconeSelect.vue  siliconeSwitch.vue  siliconeTable.vue  siliconeTag.vue  siliconeText.vue  siliconeTooltip.vue
src/router/: index.ts  utils.ts
src/router/modules/: cmd.ts  flow.ts  largeTextView.ts  preview.ts  remaining.ts  xlsxView.ts
src/store/: largeTextStore.js  largeTextStore.js.map  largeTextStore.ts
src/store/modules/: commands.ts  fileView.ts  flow.ts  locale.ts  options.ts  setting.ts  workflow.ts
src/style/: dark.scss  index.scss  sidebar.scss  silicone-message.scss  silicone-messagebox.scss
src/utils/: globalShortcut.ts  markdown.ts  message.js  message.js.map  message.ts  textOperations.js  textOperations.js.map  textOperations.ts  utils.ts  view.js  view.js.map  view.ts
src/views/: LargeTextView.tsx
src/views/cmd/: index.vue
src/views/cmd/components/: apply.vue  cat.vue  common.css  convert.vue  count.vue  datefmt.vue  dedup.vue  enumerByGroup.vue  enumerate.vue  fill.vue  idx.vue  insert.vue  join.vue  pinyin.vue  rename.vue  replace.vue  reverse.vue  search.vue  searchChain.vue  select.vue  separate.vue  skip.vue  slice.vue  sort.vue  split.vue  string.vue  transpose.vue  traverse.vue
src/views/flow/: flow.vue
src/views/flow/components/: filterNode.vue  inputNode.vue  renameNode.vue  selectNode.vue  stringNode.vue
src/views/preview/: previewXlsx.vue
src/views/text/: csvView.vue  fileView.vue  findDialog.vue  gotoDialog.vue  largeTextView.vue  replaceDialog.vue
src/views/text/fn/: useContextMenu.ts  useEdit.ts  useInsert.ts  useProgress.ts  useRename.ts  useSearch.ts
src/views/xlsx/: xlsxView.vue
