[package]
name = "insight-x"
version = "0.5.5"
description = "insight-x"
authors = ["tansen"]
license = "MIT"
repository = "https://github.com/tansen87/insight-x"
default-run = "insight-x"
edition = "2024"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "insight"
path = "src/insight/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
atoi_simd = "^0.18"
byteorder = "1.5.0"
calamine = { version = "0.33.0", features = ["dates"] }
cpc = "1.9.3"
chrono = "^0.4.41"
chardetng = "^0.1.17"
crossbeam-channel = "0.5"
csv = "1.4.0"
csv-index = "0.1.6"
dbase = { version = "0.6.1", features = ["encoding_rs"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
encoding_rs = { workspace = true }
encoding_rs_io = "0.1.7"
env_logger = "0.11"
ext-sort = { version = "0.1.5", default-features = false }
indexmap = { version = "2.13.0", features = ["serde"] }
itoa = "1"
lazy_static = "1.5.0"
log = "0.4"
memmap2 = { workspace = true }
num_cpus = "1"
odbc-api = "9.0.0"
pinyin = { version = "0.11.0", features = ["plain"] }
rayon = "1.11.0"
regex = { workspace = true }
rust_decimal = "1.40.0"
rustc-hash = "2.1.1"
rust_xlsxwriter = "0.94.0"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simdutf8 = "0.1.5"
sysinfo = "^0.38"
smallvec = "1.15.1"
tempfile = { workspace = true }
tokio = { version = "1.48.0", features = ["test-util"] }
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"

xl = { git = "https://github.com/tansen87/xl.git", branch = "main" }
json-objects-to-csv = { git = "https://github.com/tansen87/json-objects-to-csv", branch = "main"}

large-text-core = { path = "../crates/large-text-core" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
