[package]
name = "text-view"
version = "0.1.0"
description = "text-view"
authors = ["tansen"]
license = "MIT"
repository = "https://github.com/tansen87/text-view"
default-run = "text-view"
edition = "2024"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "insight"
path = "src/insight/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
chrono = "^0.4.41"
encoding_rs = { workspace = true }
encoding_rs_io = "0.1.7"
env_logger = "0.11"
log = "0.4"
memmap2 = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["test-util"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-http = "2.5.8"
tauri-plugin-os = "2.3.2"

large-text-core = { path = "../crates/large-text-core" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.1"
