[package]
name = "large-text-core"
version = "0.1.1"
edition = "2021"
description = "Core library for handling large text files search and replace efficiently"
license = "MIT"
repository = "https://github.com/acejarvis/large-text-viewer"
keywords = ["text", "viewer", "large-file", "log-viewer"]
categories = ["text-processing"]

[dependencies]
anyhow = "^1.0"
encoding_rs = "^0.8"
memmap2 = "^0.9"
regex = "^1.10"

[dev-dependencies]
tempfile = "^3.23.0"
