[package]
name = "large-text-core"
version = "0.1.1"
edition = "2021"
description = "Core library for handling large text files search and replace efficiently"
license = "MIT"
repository = "https://github.com/acejarvis/large-text-viewer"
keywords = ["text", "viewer", "large-file", "log-viewer"]
categories = ["text-processing"]

[dependencies]
anyhow = { workspace = true }
encoding_rs = { workspace = true }
memmap2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
